app/src/main/java/com/example/bookclub/errors/AccountPasswordBadRequestException.java
package com.example.bookclub.errors;

public class AccountPasswordBadRequestException extends RuntimeException {
    public AccountPasswordBadRequestException() {
        super("Password bad request");
    }
}
